Added a live video feed. Subject to change when connecting to DL models for real-time feedback. (Using an API like WebRTC)

--- a/synthura/src/components/VideoFrame.css
+++ b/synthura/src/components/VideoFrame.css
@@ -4,15 +4,20 @@
     --border-color: #3e3e42;
 }
 
-.video-feed {
+.video-frame {
     background-color: var(--background-dark2);
     border: var(--border-color) solid 5px;
     border-radius: 1%;
     height: 20rem;
     width: 20rem;
+}
+
+#plus-sign-span {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100%;
+    width: 100%;
 }
 
 #plus-sign {
