--- a/synthura/src/components/VideoFrame.css
+++ b/synthura/src/components/VideoFrame.css
@@ -1,6 +1,8 @@
 :root {
     --background-dark1: #1e1e1e;
     --background-dark2: #252526;
+    --accent-dark: #2d2d30;
+    --accent-light: #4f4f55;
     --border-color: #3e3e42;
 }
 
@@ -12,6 +14,16 @@
     width: 20rem;
 }
 
+
+#add-camera-button {
+    background: transparent;
+    border: none;
+    outline: none;
+    width: 5rem;
+    height: 5rem;
+}
+
+/* Container for plus icon */
 #plus-sign-span {
     display: flex;
     justify-content: center;
@@ -20,7 +32,14 @@
     width: 100%;
 }
 
+/* styling of plus icon */
 #plus-sign {
-    width: 5rem;
-    height: 5rem;
+    width: 100%;
+    height: 100%;
+    fill: #3e3e42;
+    transition: fill 0.3s ease;
+}
+#plus-sign:hover {
+    cursor: pointer;
+    fill: var(--accent-light);
 }
