--- a/synthura/src/components/VideoFrame.css
+++ b/synthura/src/components/VideoFrame.css
@@ -7,11 +7,36 @@
 }
 
 .video-frame {
+    position: relative;
     background-color: var(--background-dark2);
     border: var(--border-color) solid 5px;
     border-radius: 1%;
-    height: 20rem;
-    width: 20rem;
+    height: 25rem;
+    width: 25rem;
+    margin: 5px;
+}
+
+/* styling for frame of live video feed */
+.live-video-container {
+    position: relative;
+    top: calc(2rem - 5px);
+}
+
+/* styling for live video bar */
+.live-video-bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 2rem;
+    background-color: var(--background-dark1);
+    box-sizing: border-box;
+    padding: 2px;
+    border-radius: 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
 }
 
 
