--- a/synthura/src/components/tempStyles/VideoFrame.css
+++ b/synthura/src/components/tempStyles/VideoFrame.css
@@ -1,3 +1,4 @@
+/* global variables */
 :root {
     --background-dark1: #1e1e1e;
     --background-dark2: #252526;
@@ -6,6 +7,7 @@
     --border-color: #3e3e42;
 }
 
+/* styling for video frame */
 .video-frame {
     position: relative;
     background-color: var(--background-dark2);
@@ -15,6 +17,8 @@
     width: 25rem;
     margin: 5px;
 }
+
+/* Live video feed styling */
 
 /* styling for frame of live video feed */
 .live-video-container {
@@ -31,15 +35,48 @@
     height: 2rem;
     background-color: var(--background-dark1);
     box-sizing: border-box;
-    padding: 2px;
+    padding: 0 10px;
     border-radius: 3px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     z-index: 2;
+    font-family: 'roboto', sans-serif;
+    font-size: 13px;
+    color: #cccccc;
 }
 
+#close-camera-button {
+    background: transparent;
+    outline: none;
+    border: none;
+    width: 22px; /* Adjust the width to your desired size */
+    height: 22px; /* Adjust the height to your desired size */
+    border-radius: 5px; /* Adjust the border-radius to create rounded corners */
+    position: relative; /* Positioning for the icon */
+}
 
+#close-camera-button:hover::before {
+    content: ""; /* Create a pseudo-element to overlay the background */
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 0.2); /* Light up the background color on hover */
+    border-radius: 5px; /* Ensure pseudo-element has same rounded corners as button */
+    cursor: pointer;
+}
+
+#close-camera-icon {
+    fill: white;
+    width: 100%;
+    height: 100%;
+}
+
+/* styling for add camera frame  */
+
+/* styling for add camera button  */
 #add-camera-button {
     background: transparent;
     border: none;
