Able to add and remove frames from grid

--- a/synthura/src/components/tempStyles/VideoFrame.css
+++ b/synthura/src/components/tempStyles/VideoFrame.css
@@ -24,6 +24,7 @@
 .live-video-container {
     position: relative;
     top: calc(2rem - 5px);
+    transform: scaleX(-1);
 }
 
 /* styling for live video bar */
