--- a/synthura/src/components/tempStyles/CameraGrid.css
+++ b/synthura/src/components/tempStyles/CameraGrid.css
@@ -1,4 +1,17 @@
-#camera-grid-container {
+#input-url-container {
+    border: solid green;
+    width: 500px;
+    height: 500px;
+}
+
+#streamUrl {
+    width: 300px;
+    height: 50px;
+    font-size: large;
+}
+
+#camera-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    border: solid red;
 }
