--- a/synthura/src/App.css
+++ b/synthura/src/App.css
@@ -1,17 +1,20 @@
+/* global variables */
 :root {
-  --background-primary-color: #1e1e1e;
+  --background-dark1: #1e1e1e;
+  --background-dark2: #252526;
+  --accent-dark: #2d2d30;
+  --accent-light: #4f4f55;
   --border-color: #3e3e42;
 }
 
 body {
-  background-color: var(--background-primary-color);
+  background-color: var(--background-dark1);
   color: white;
   font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
   display: flex;
   justify-content: center;
-  align-items: center;
   height: 100vh;
   width: 100vw;
 }
