--- a/synthura/src/components/tempStyles/CameraGrid.css
+++ b/synthura/src/components/tempStyles/CameraGrid.css
@@ -1,17 +1,66 @@
-#input-url-container {
-    border: solid green;
-    width: 500px;
-    height: 500px;
+/* global variables */
+:root {
+    --background-dark1: #1e1e1e;
+    --background-dark2: #252526;
+    --accent-dark: #2d2d30;
+    --accent-light: #5c5c63;
+    --border-color: #3e3e42;
 }
 
-#streamUrl {
-    width: 300px;
-    height: 50px;
-    font-size: large;
+#camera-grid-container {
+    width: 50vw;
+    height: 15vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
-
 #camera-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    border: solid red;
+}
+
+h2 {
+    text-align: center;
+}
+
+/* styling of input field and button */
+#input-url-container {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: transparent;
+    border: 1px solid var(--accent-light);
+    border-radius: 20px;
+    padding: 0 0 0 10px;
+}
+/* styling of input field */
+#streamUrl {
+    width: 100%;
+    height: 50px;
+    font-size: large;
+    outline: none;
+    color: snow;
+    background: inherit;
+    border: none;
+}
+
+/* styling of plus button */
+#add-camera-btn {
+    background: transparent;
+    width: 40px;
+    height: 40px;
+    border: none;
+    position: absolute;
+    right: 10px;
+}
+
+/* styling of plus icon */
+#plus-sign {
+    width: 100%;
+    height: 100%;
+    fill: var(--accent-light);
+}
+#plus-sign:hover {
+    cursor: pointer;
 }
