adding routing, getting bugs

--- a/synthura/src/App.css
+++ b/synthura/src/App.css
@@ -2,4 +2,20 @@ body{
   margin: 0; /* Reset default margin to ensure full background coverage */
   height: 100vh; /* Ensure the body covers the full viewport height */
   background: linear-gradient(rgb(0, 0, 0), rgb(255, 255, 255));
+  transform: translateY(+40%);
 }
+
+body h1,h2,p{
+  color:white;
+  text-align: center;
+}
+
+body h2{
+  size: 40px;
+}
+
+.button2{
+  padding: 15px 32px;
+  text-align: center;
+}
+
