--- a/synthura/src/components/tempStyles/CameraGrid.css
+++ b/synthura/src/components/tempStyles/CameraGrid.css
@@ -7,6 +7,7 @@
     --border-color: #3e3e42;
 }
 
+/* layout styling */
 #camera-grid-container {
     width: 50vw;
     height: 15vh;
@@ -21,9 +22,12 @@
 
 h2 {
     text-align: center;
+    color: snow;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 1px;
 }
 
-/* styling of input field and button */
+/* styling of input field and button container */
 #input-url-container {
     position: relative;
     display: flex;
@@ -44,7 +48,6 @@ h2 {
     background: inherit;
     border: none;
 }
-
 /* styling of plus button */
 #add-camera-btn {
     background: transparent;
@@ -54,7 +57,6 @@ h2 {
     position: absolute;
     right: 10px;
 }
-
 /* styling of plus icon */
 #plus-sign {
     width: 100%;
