--- a/synthura/src/components/tempStyles/EnvironmentSideBar.css
+++ b/synthura/src/components/tempStyles/EnvironmentSideBar.css
@@ -18,6 +18,11 @@
     flex-direction: column;
     align-items: center;
     padding: 15px;
-    border: solid white;
     background-color: var(--background-dark2);
+    display: none; /* hide sidebar by default */
+}
+
+/* container for environment and cluster buttons */
+.environment {
+    width: 100%;
 }
