Created a sidebar that slides in/out of the page when clicking an icon

--- a/synthura/src/components/tempStyles/ClusterButton.css
+++ b/synthura/src/components/tempStyles/ClusterButton.css
@@ -7,6 +7,7 @@
     position: relative;
     font-size: 16px;
     font-weight: 600;
+    cursor: pointer;
 }
 .cluster-camera-icon {
     width: 20px;
