--- a/synthura/src/App.css
+++ b/synthura/src/App.css
@@ -1,15 +1,26 @@
-body{
-  margin: 0; /* Reset default margin to ensure full background coverage */
-  height: 100vh; /* Ensure the body covers the full viewport height */
-  background: linear-gradient(rgb(0, 0, 0), rgb(255, 255, 255));
-}
-
+/* global variables */
 :root {
   --background-dark1: #1e1e1e;
-  --background-dark2: #141414;
   --accent-dark: #2d2d30;
   --accent-light: #4f4f55;
   --border-color: #3e3e42;
+}
+
+body {
+  background-color: var(--background-dark1);
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100vw;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  box-sizing: border-box;
 }
 
 .unique_button {
