--- a/synthura/src/components/tempStyles/EnvironmentSideBar.css
+++ b/synthura/src/components/tempStyles/EnvironmentSideBar.css
@@ -21,7 +21,7 @@
     background-color: var(--background-dark2);
     transition: transform 0.3s ease;
 }
-
+/* animate sidebar to slide in/out of frame */
 .hide-side-bar {
     transform: translateX(-400px);
 }
