--- a/synthura/src/components/tempStyles/CameraGrid.css
+++ b/synthura/src/components/tempStyles/CameraGrid.css
@@ -17,13 +17,14 @@
     align-items: center;
 }
 #camera-grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
     width: 100%;
     border: 2px solid var(--accent-light);
     border-radius: 3px;
     height: 85%;
-    margin: 10px;
+    margin: 20px;
     gap: 10px;
     padding: 10px;
     overflow-y: auto;
