--- a/synthura/src/components/tempStyles/EnvironmentSideBar.css
+++ b/synthura/src/components/tempStyles/EnvironmentSideBar.css
@@ -10,7 +10,7 @@
 /* sidebar container  */
 #side-bar {
     height: 100vh;
-    width: 20%;
+    width: 25%;
     box-sizing: border-box;
     position: absolute;
     left: 0;
@@ -20,6 +20,7 @@
     padding: 15px;
     background-color: var(--background-dark2);
     transition: transform 0.3s ease;
+    z-index: 5;
 }
 /* animate sidebar to slide in/out of frame */
 .hide-side-bar {
