--- a/synthura/src/components/CameraGrid/CameraGrid.css
+++ b/synthura/src/components/CameraGrid/CameraGrid.css
@@ -48,20 +48,21 @@ h2 {
     background: transparent;
     border: 1px solid var(--accent-light);
     border-radius: 20px;
-    padding: 0 0 0 10px;
+    padding: 0 0 0 15px;
     width: 50%;
-    height: 5%;
+    height: 6%;
     margin-bottom: 10px;
 }
 /* styling of input field */
 #streamUrl {
     width: 100%;
     height: 50px;
-    font-size: large;
     outline: none;
-    color: snow;
+    font-size: large;
+    color: rgb(214, 204, 204);
     background: inherit;
     border: none;
+    font-weight: 400;
 }
 /* styling of plus button */
 #add-camera-btn {
