configured frontend to receive and display video from backend

--- a/synthura/src/components/CameraGrid/CameraGrid.css
+++ b/synthura/src/components/CameraGrid/CameraGrid.css
@@ -54,7 +54,7 @@ h2 {
     margin-bottom: 10px;
 }
 /* styling of input field */
-#streamUrl {
+#cameraIP {
     width: 100%;
     height: 50px;
     outline: none;
