--- a/synthura/src/components/CameraGrid/CameraGrid.css
+++ b/synthura/src/components/CameraGrid/CameraGrid.css
@@ -25,9 +25,13 @@
     border-radius: 3px;
     height: 85%;
     margin: 20px;
-    gap: 10px;
+    gap: 1.2%;
     padding: 10px;
     overflow-y: auto;
+}
+.live-feed {
+    width: 32.3%;
+    height: 100%;
 }
 
 h2 {
