--- a/synthura/src/components/CameraGrid/CameraGrid.css
+++ b/synthura/src/components/CameraGrid/CameraGrid.css
@@ -19,19 +19,23 @@
 #camera-grid {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: start;
     width: 100%;
     border: 2px solid var(--accent-light);
     border-radius: 3px;
     height: 85%;
     margin: 20px;
-    gap: 1.2%;
     padding: 10px;
+    gap: 16px;
     overflow-y: auto;
 }
 .live-feed {
-    width: 32.3%;
+    width: 32.7%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 h2 {
