--- a/synthura/src/components/AnalyticsFeed/AnalyticsFeed.css
+++ b/synthura/src/components/AnalyticsFeed/AnalyticsFeed.css
@@ -1,12 +1,41 @@
+/* global variables */
+:root {
+    --background-dark1: #1e1e1e;
+    --background-dark2: #252526;
+    --accent-dark: #2d2d30;
+    --accent-light: #5c5c63;
+    --border-color: #3e3e42;
+}
+
 .analytics-feed {
     width: 100%;
     height: 33%;
     box-sizing: border-box;
-}
-
-.analytics-feed p, li {
+    border: 2px solid var(--accent-light);
+    margin-top: 5px;
     color: snow;
     font-family: 'Roboto', sans-serif;
 }
+
+.objects-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 5px;
+}
+
+.analytics-feed h2 {
+    display: flex;
+    justify-content: center;
+}
+
+.analytics-feed p {
+    background-color: black;
+    font-size: 1.2rem;
+    padding: 8px;
+    border-radius: 5px;
+}
+
+
 
 
