Improved the loading speed of recordings when a recording gets deleted

--- a/synthura/src/pages/RecordingsPage/RecordingsPage.css
+++ b/synthura/src/pages/RecordingsPage/RecordingsPage.css
@@ -56,4 +56,9 @@
   width: 100vw;
   color: snow;
 }
-  
+
+.centered-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
