--- a/synthura/src/components/AnalyticsFeed/AnalyticsFeed.css
+++ b/synthura/src/components/AnalyticsFeed/AnalyticsFeed.css
@@ -11,29 +11,29 @@
     width: 100%;
     height: 33%;
     box-sizing: border-box;
-    border: 2px solid var(--accent-light);
     margin-top: 5px;
-    color: snow;
     font-family: 'Roboto', sans-serif;
 }
 
 .objects-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 5px;
 }
 
 .analytics-feed h2 {
-    display: flex;
-    justify-content: center;
+    color: snow;
 }
 
 .analytics-feed p {
-    background-color: black;
+    color: var(--background-dark1);
+    background-color: var(--accent-light);
     font-size: 1.2rem;
     padding: 8px;
     border-radius: 5px;
+    margin: 0;
+    font-weight: 700;
 }
 
 
