--- a/synthura/src/components/AnalyticsFeed/AnalyticsFeed.css
+++ b/synthura/src/components/AnalyticsFeed/AnalyticsFeed.css
@@ -12,7 +12,12 @@
     height: 33%;
     box-sizing: border-box;
     margin-top: 5px;
+    padding: 5px;
     font-family: 'Roboto', sans-serif;
+}
+
+.objects-div {
+    height: 50%;
 }
 
 .objects-container {
@@ -34,4 +39,23 @@
     border-radius: 5px;
     margin: 0;
     font-weight: 700;
+}
+.status-bar {
+    height: 50%;
+    display: flex;
+    align-items: center;
+}
+
+.status-bar .motion {
+    background-color: snow;
+    color: var(--background-dark1);
+    width: 100%;
+    text-align: center;
+}
+
+.status-bar .no-motion {
+    background: var(--accent-dark);
+    color: snow;
+    width: 100%;
+    text-align: center;
 }
