--- a/synthura/src/components/EnvironmentButton/EnvironmentButton.css
+++ b/synthura/src/components/EnvironmentButton/EnvironmentButton.css
@@ -12,7 +12,7 @@
     width: 100%;
     height: 50px;
     display: flex;
-    align-items: center;
+    align-items: center;  
     justify-content: space-between;
     position: relative;
     background-color: var(--background-dark2);
@@ -43,14 +43,17 @@
     position: relative;
     bottom: 2px;
     margin-left: 3px;
+    left: 10px;
 }
 
 /* close environment icon */
-#close-env-icon {
-    fill: white;
-    position: absolute;
-    left: 10px;
-    width: 16px;
-    height: 16px;
-    cursor: pointer;
+#three-dots { 
+    width: 60px;
+    height: 60px;
+    fill: snow;
+    position: relative;
+    bottom: 2px;
+    margin-left: 3px;
+    right: 10px;
 }
+
