--- a/synthura/src/pages/EnvironmentsPage/EnvironmentsPage.css
+++ b/synthura/src/pages/EnvironmentsPage/EnvironmentsPage.css
@@ -20,6 +20,7 @@
 .environments-page-blur {
     filter: blur(5px);
     pointer-events: none;
+    transition: filter 0.5s ease;
 }
 
 /* styling of camera naming component */
@@ -38,11 +39,12 @@
     border: 2px solid var(--accent-dark);
     border-radius: 5px;
     opacity: 0;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
+    
 }
 .name-component-field.show {
     opacity: 1;
     visibility: visible;
+    transition: opacity 0.5s ease, visibility 0.5s ease;
 }
 
 .name-component-field h2 {
@@ -59,6 +61,8 @@
     padding: 5px;
     font-size: 1.5rem;
     outline: none;
+    border-radius: 5px;
+    border: 2px solid var(--accent-dark);
 }
 
 .name-component-field button {
@@ -72,4 +76,28 @@
     cursor: pointer;
     outline: none;
     margin: 0 10px;
+}
+
+#error-message-naming-component {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+
+#error-message-naming-component span {
+    font-family: 'Roboto', sans-serif;
+    color: snow;
+    font-size: 1.2rem;
+    font-weight: 700;
+    background-color: var(--background-dark1);
+    padding: 10px;
+    border: solid 2px var(--accent-dark);
+    border-radius: 5px;
+}
+
+#error-message-naming-component button {
+    width: 80px;
+    height: 40px;
 }
