--- a/synthura/src/components/EnvironmentSideBar/EnvironmentSideBar.css
+++ b/synthura/src/components/EnvironmentSideBar/EnvironmentSideBar.css
@@ -57,8 +57,8 @@
 /* hamburger sidebar icon */
 #side-bar-icon {
     position: fixed;
-    left: 20px;
-    top: 30px;
+    left: 1%;
+    top: 2%;
     width: 25px;
     height: 20px;
     fill: snow;
