put the tour/tutorial in the environments page.

--- a/synthura/src/components/PopUp/PopUp.css
+++ b/synthura/src/components/PopUp/PopUp.css
@@ -4,6 +4,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: black;
+    max-width: 200px;
     color: white;
     padding: 20px;
     border: 5px solid yellow;
