--- a/synthura/src/pages/EnvironmentsPage/EnvironmentsPage.css
+++ b/synthura/src/pages/EnvironmentsPage/EnvironmentsPage.css
@@ -96,11 +96,41 @@
   .btn:hover {
     background-color: var(--background-dark1);
   }
+/* Hover effect for all buttons with class "btn" */
+.btn.recordingsPage {
+    width: 200px;
+  height: 60px;
+  background: var(--accent-dark);
+  color: snow;
+  font-size: 1.3rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  outline: none;
+  margin-right: -10px; /* Adjust as needed */
+  align-self: flex-end;
+  /* New property */
+  box-sizing: border-box;
+  }
 
-  .signout {
-    position: absolute; /* Make it absolute for positioning */
-    top: 20px;  /* Position it 10px from the top */
-    right: 20px; /* Position it 10px from the right */
+  .btn recordingsPage:hover {
+    background-color: var(--background-dark1);
+  }
+
+  .btn.signout {
+  width: 200px;
+  height: 60px;
+  background: var(--accent-dark);
+  color: snow;
+  font-size: 1.3rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  outline: none;
+  margin-right: -20px; /* Adjust as needed */
+  align-self: flex-end;
+  /* New property */
+  box-sizing: border-box;
   }
 
 
