--- a/synthura/src/pages/LandingPage/LandingPage.css
+++ b/synthura/src/pages/LandingPage/LandingPage.css
@@ -78,19 +78,17 @@ main > p {
     border: 1px solid var(--border-color);
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    display: flex;
-    align-items: center;
+    align-items: space-around;
     justify-content: center;
-    margin-top: 20px;
+    margin: 0 20px;
     padding: 20px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     font-family: var(--secondary-font);
     z-index: 5;
-    position: relative;
     bottom: 2%;
 }
 
@@ -108,8 +106,6 @@ main > p {
 
 #login-container #user-information-fields {
     width: 50%;
-    position: relative;
-    bottom: 5%;
 }
 
 #login-container input {
@@ -127,8 +123,8 @@ main > p {
 }
 
 #login-button {
-    width: 100px;
-    height: 50px;
+    width: 200px;
+    height: 75px;
     background: var(--background-dark1);
     color: snow;
     font-size: 1.3rem;
@@ -137,6 +133,8 @@ main > p {
     cursor: pointer;
     outline: none;
     margin: 0 10px;
+    position: relative;
+    bottom: 30px;
 }
 
 #register-link {
