--- a/synthura/src/pages/EnvironmentsPage/EnvironmentsPage.css
+++ b/synthura/src/pages/EnvironmentsPage/EnvironmentsPage.css
@@ -31,19 +31,24 @@
     font-family: 'Roboto', sans-serif;
     text-align: center;
 }
-#environments-page-nav-bar #recordings-page-link {
-    font-size: 1.5rem;
-    font-family: 'Roboto', sans-serif;
-    background-color:#181818;
-    color: white;
+#environments-page-nav-bar #recordings-page-link:hover {
+    background-color: var(--accent-light);
+    cursor: pointer;
+}
+#links {
+    height: 100%;
     position: absolute;
     right: 1%;
-    text-decoration: none;
-    padding: 10px;
-    border-radius: 5px;
-    z-index: 5;
 }
-#environments-page-nav-bar #recordings-page-link:hover {
+#links button {
+    height: 100%;
+    width: 150px;
+    font-size: 1.2rem;
+    background: transparent;
+    color: snow;
+    border: none;
+}
+#links button:hover {
     background-color: var(--accent-light);
     cursor: pointer;
 }
