--- a/synthura/src/components/CameraGrid/CameraGrid.css
+++ b/synthura/src/components/CameraGrid/CameraGrid.css
@@ -10,13 +10,13 @@
 /* layout styling */
 #camera-grid-container {
     width: 95vw;
-    height: 100vh;
+    height: 92.5%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    gap: 15px;
     align-items: center;
     position: relative;
+    top: 7.5%;
 }
 #camera-grid {
     display: flex;
@@ -25,11 +25,11 @@
     width: 100%;
     border: 2px solid var(--accent-light);
     border-radius: 3px;
-    height: 80%;
     padding: 10px;
     gap: 16px;
     overflow-y: auto;
     margin-bottom: -5px;
+    height: 85%;
 }
 .live-feed {
     width: 32.7%;
@@ -51,7 +51,6 @@ h2 {
 /* styling of input field and button container */
 #input-url-container {
     position: relative;
-    top: 5%;
     display: flex;;
     justify-content: space-between;
     align-items: center;
@@ -61,6 +60,7 @@ h2 {
     padding: 0 0 0 15px;
     width: 70%;
     margin-bottom: 10px;;
+    top: 5px;
 }
 /* styling of input field */
 #cameraIP {
