--- a/synthura/src/pages/EnvironmentsPage/EnvironmentsPage.css
+++ b/synthura/src/pages/EnvironmentsPage/EnvironmentsPage.css
@@ -14,6 +14,7 @@
     height: 100vh;
     position: relative;
     box-sizing: border-box;
+    overflow: hidden;
 }
 #environments-page-nav-bar {
     position: absolute;
@@ -25,12 +26,15 @@
     justify-content: center;
     color: snow;
     gap: 5%;
+    padding: 5px;
 }
 #environments-page-nav-bar h3 {
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-family: 'Roboto', sans-serif;
     text-align: center;
     max-width: 50%;
+    letter-spacing: 1px;
+    font-weight: 400;
 }
 .links {
     height: 100%;
